<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shrex">

    <EditText
        android:id="@+id/compute"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="right|bottom"
        android:hint="@string/enter_the_number"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:columnCount="4"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/key_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_del" />

        <Button
            android:id="@+id/key_plus_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_plus_minus" />

        <Button
            android:id="@+id/key_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_percent" />

        <Button
            android:id="@+id/deleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_deleted" />


        <Button
            android:id="@+id/key_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_1" />

        <Button
            android:id="@+id/key_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_2" />

        <Button
            android:id="@+id/key_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_3" />

        <Button
            android:id="@+id/key_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/multiply" />

        <Button
            android:id="@+id/key_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_4" />

        <Button
            android:id="@+id/key_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_5" />

        <Button
            android:id="@+id/key_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_6" />

        <Button
            android:id="@+id/key_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_minus" />

        <Button
            android:id="@+id/key_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_7" />

        <Button
            android:id="@+id/key_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_8" />

        <Button
            android:id="@+id/key_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_9" />

        <Button
            android:id="@+id/key_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_plus" />

        <Button
            android:id="@+id/key_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_0" />

        <Button
            android:id="@+id/key_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_dot" />

        <Button
            android:id="@+id/key_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/key_equal" />


    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>